[tool.poetry]
name = "github-prometheus-exporter"
version = "0.1.0"
description = ""
authors = ["hxnir <nir@hakasecurity.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygithub = "^2.1.1"
ipython = "^8.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
